Somewhat fixed job post filtering, still broken on certain edge cases.

--- a/esljobmap/static/foundation/scss/section/_job_list.scss
+++ b/esljobmap/static/foundation/scss/section/_job_list.scss
@@ -10,4 +10,13 @@
             font-size: 0.7rem;
         }
     }
+
+    .search-filters {
+        margin: 1rem 0;
+
+        .and-break {
+            padding: 1rem 0;
+            margin: 0;
+        }
+    }
 }
